--- a/css/style.css
+++ b/css/style.css
@@ -11,21 +11,25 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: linear-gradient(125deg, rgba(0,7,36,1) 0%, rgba(115,9,121,1) 40%, rgba(139,0,255,1) 100%);
+    background-image: url("https://images.pexels.com/photos/4834961/pexels-photo-4834961.jpeg?cs=srgb&dl=pexels-buchkiste-4834961.jpg&fm=jpg");
+    background-color: #666f99;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   #list{
     background: white;
     border-radius: 9px;
-    box-shadow: 0 0 5vh rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 5vh rgba(0, 0, 0, .3);
     padding: 30px;
   }
 
   #title{
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-content: flex-end;
     justify-content: center;
+    align-items: end;
   }
 
   #titleInput{
@@ -33,50 +37,77 @@ body{
     display: flex;
     align-items: center;
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     border-radius: 9px;
     border-style: solid;
-    border-color: rgb(173, 173, 173);
+    border-color: rgb(173, 173, 173, .3);
     border-width: 1px;
+    padding: 1vh 2vh 1vh 2vh;
+    color: #666f99;
   }
 
-  #titleInput::placeholder{
-    padding: 2vh;
+  ::placeholder{
+    color: rgba(63, 69, 95, .2);
   }
 
   .bx-edit{
-    align-items: end;
     position: absolute;
+    padding-right: 2vh;
+    opacity: .3;
   }
 
   #separator{
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding: 100px;
-    margin: 100px;
+    margin: 12px 0;
+    box-shadow: 0 12px 12px rgba(211, 220, 248, .5);
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    max-width: 100%;
+    height: 10px;
+  }
 
-    box-shadow: 0 0 5vh rgba(0, 0, 0, 0.5);
+  #items{
+    padding: 8px 8px;
+    margin: 12px 0;
+  }
+
+  .item {
+    width: 100%;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: "Open Sans";
+    border-radius: 12px;
+    border: 0;
+    padding: 9px 12px;
+    color: #3f455f;
+    position: relative;
   }
 
   #addItem{
     display: flex;
     flex-direction: column;
+    align-content: stretch;
+    justify-content: center;
+    align-items: end;
   }
 
   #itemInput{
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     border-radius: 9px;
     border-style: solid;
-    border-color: rgb(173, 173, 173);
+    border-color: rgb(173, 173, 173, .3);
     border-width: 1px;
+    padding: 1vh 2vh 1vh 2vh;
+    color: #666f99;
   }
 
   .bx-plus{
-    align-items: end;
     position: absolute;
+    padding-right: 2vh;
+    opacity: 0.3;
+    cursor: pointer;
   }
